--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <h2>my second heading</h2>
 <p>My first paragraph.</p>
   <p>otra rindkopa</p>
+  <p><a href="poga.html">Click Here!</a></p>
 
 </body>
 </html>
