--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <p>My first paragraph.</p>
   <p>otra rindkopa</p>
   <p><a href="poga.html">Click Here!</a></p>
+  
+  <p><a href=''https://datorium.eu''>apmekle datorium majas lapu</a></p>
 
 </body>
 </html>
