--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <p>otra rindkopa</p>
   <p><a href="poga.html">Click Here!</a></p>
   
-  <p><a href=''https://datorium.eu''>apmekle datorium majas lapu</a></p>
+  <p><a href=''https://datorium.eu''apmekle datorium majas lapu</a></p>
 
 </body>
 </html>
